# RT7-Raspberry-Pi-VL530X

./: .gitignore  CMakeLists.txt  README  README.txt  main.c  off  off.c  run
src/: VL53L0X_user.c  VL53L0X_user.h  bcm2835.c  distance_sensor_shield.c  distance_sensor_shield.h  i2c.c  i2c.h  moving_average.c  moving_average.h
src/VL530X_driver/: VL53L0X_i2c_driver.c  VL53L0X_i2c_driver.h
src/bcm2835/: bcm2835.h
